# expCmake

./: CMakeLists.txt  errors.txt  main.cpp
inc/: first.h  main.h
inc/depends/: depend.h
src/: src.cpp
src/depends/: depends.cpp
